--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,189 @@
   to {
     transform: rotate(360deg);
   }
+
+  @media screen and (min-width: 380px) {
+    .nav-container header ul{
+        gap: 2em;
+        padding-right: 2em;
+    }
 }
+
+@media screen and (min-width: 530px){
+    .about{
+        grid-template-columns: 90% auto;
+    }
+
+    .footer{
+        padding: 0 4em;
+    }
+}
+
+@media screen and (min-width: 570px){
+    .logo{
+        padding: 1.75em 2em;
+    }
+
+    .nav-container header ul{
+        gap: 3em;
+    }
+
+    .content-title{
+        font-size: 3em;
+    }
+    
+    .content-subtitle{
+        font-size: 1.5em;
+    }
+    
+    .content-des{
+        font-size: 1em;
+    }
+
+    .hire{
+        margin: 0 4em 2em;
+        flex-direction: row;
+        padding: 0 2em;
+    }
+
+    .hire-button{
+        margin-bottom: unset;
+    }
+
+}
+
+@media screen and (min-width: 710px){
+    .skills-container{
+        flex-direction: row;
+    }
+}
+
+@media screen and (min-width: 700px){
+    .nav-container header ul{
+        padding-right: 4em;
+    }
+
+    .logo{
+        padding-left: 2.5em;
+    }
+
+    .content{
+        padding-left: 3em;
+    }
+
+    .work{
+        padding: 4em;
+    }
+
+    .about{
+        grid-template-columns: 80% auto;
+    }
+
+    .hire-title{
+        font-size: 2em;
+    }
+
+    .hire-title > span > svg{
+        width: 40px;
+        height: 50px;
+    }
+}
+
+@media screen and (min-width: 930px){
+    .hero-design{
+        display: initial;
+        transform: translate(-50%);
+    }
+
+    .hero{
+        display: grid;
+        grid-template-columns: 75% auto;
+        min-height: 500px;
+    }
+
+    .socials{
+        display: flex;
+    }
+
+    .nav-container{
+        display: grid;
+        grid-template-columns: 75% auto;
+    }
+
+    .content{
+        display: block;
+        min-height: 500px;
+    }
+
+    .content-block{
+        margin-top: 9%;
+    }
+
+    .about{
+        grid-template-columns: 70% auto;
+    }
+
+    .about-title{
+        font-size: 2.5em;
+    }
+
+    .about-content{
+        padding: 2em 4em;
+    }
+
+}
+
+@media screen and (min-width: 1100px){
+    .work-item{
+        display: grid;
+        grid-template-columns: 50% auto;
+        max-width: unset;
+        justify-content: center;
+    }
+
+    .witem-content{
+        max-height: 330px;
+    }
+
+    .witem-image{
+        max-width: 400px;
+        max-height: 400px;
+    }
+}
+
+@media screen and (min-width: 1039px){
+    .skill-item{
+        margin-top: -7em;
+    }
+
+    .about-content{
+        margin-bottom: 4em;
+    }
+}
+
+@media screen and (min-width: 1150px){
+    .hero{
+        grid-template-columns: 70% auto;
+    }
+
+    .nav-container{
+        grid-template-columns: 70% auto;
+    }
+
+    .content-block{
+        margin-top: 12%;
+    }
+
+    .logo{
+        padding-left: 5em;
+    }
+    
+    .content{
+        padding-left: 6.5em;
+    }
+
+    .work-item{
+        grid-template-columns: 60% auto;
+    }
+}
+
